updated the instruction

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                 <li>Dark Colored Bubbles require 5 clicks to burst</li>
                 <li>Click on the Gauntlet to snap and burst many bubbles at once,but this power can be used only once</li>
                 <li>Click on the refridgerator to freeze the bubbles for 10 seconds</li>
-                
+                <li>Click on the Spirit bottle to slow down the rate of generation of bubbles</li>
+                <li>You cant use freeze and spirit power at the same time</li>
+                <li>The Powers can be used only once.So use it wisely</li>
             </ul>
         </div>
     </div>
